--- a/7up/7up.html
+++ b/7up/7up.html
@@ -14,9 +14,11 @@
     -->
     <style>
         body {
-            /* background-image: url(public/images/7up.jpg); */
-            background: gray;
+            background-image: url(public/images/7up.jpg);
+            /* background: gray; */
             background-size: cover;
+            background-repeat: no-repeat;
+
         }
 
         li {
@@ -244,10 +246,10 @@
             </path>
         </svg>
         <ul class="front-item">
+            <li><a href="#"><div class="circle-solid-white"></div></a></li>
             <li><a href="#"><div class="circle-white"></div></a></li>
-            <li><a href="#"><div class="circle-solid-white"></div></a></li>
-            <li><a href="#"><div class="circle-solid-white"></div></a></li>
-            <li><a href="#"><div class="circle-solid-white"></div></a></li>
+            <li><a href="#"><div class="circle-white"></div></a></li>
+            <li><a href="#"><div class="circle-white"></div></a></li>
         </ul>
         <ul class="after-item">
             <li><a href="#"><div class="content">7UP</div>   <div class="circle-solid"></div></a></li>
